--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>血影武侠 - Blood Shadow Wuxia</title>
+    <!-- Favicon: A Red 'Xia' (Hero) character on Black background -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%231a1a1a'/><text x='50' y='72' font-family='serif' font-size='65' fill='%23dc2626' text-anchor='middle' font-weight='bold'>侠</text></svg>" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=Noto+Serif+SC:wght@400;700&display=swap');
