feat: Enhance game mechanics and enemy variety
Introduces a new dash ability for the player with cooldowns.
Adds new enemy types (Charger, Archer) with distinct AI behaviors and elite variants.
Improves visual effect rendering and asset generation for sprites, ensuring square aspect ratios.
Updates weapon defaults and constants for better game balance.
Refactors spawning logic to accommodate new enemy types and elite modifiers.

--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Entry Point for Vite/Bundlers. CRITICAL: This loads the React app. -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
